--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="masthead text-center text-white">
         <div class="masthead-content">
             <div class="container">
-                <h1 class="shadow masthead-heading mb-0" data-bs-hover-animate="tada" style="text-shadow: 10px 5px 6px rgb(6,5,5);">Be #GoogleCloudReady</h1>
+                <h1 class="masthead-subheading mb-0" data-bs-hover-animate="tada" style="text-shadow: 10px 5px 6px rgb(6,5,5);">Be #GoogleCloudReady</h1>
                 <h4 class="display-2 masthead-subheading mb-0" data-bs-hover-animate="tada" style="filter: invert(100%);text-shadow: 7px 0px 8px rgb(0,0,0);">At Delhi Institue of Tool Engineering</h4><a class="btn btn-primary btn-xl rounded-pill mt-5" role="button" data-aos="fade-up" href="#main" style="background: rgb(14,41,136);border-style: solid;border-color: rgb(255,213,213);filter: contrast(179%) grayscale(100%);">Learn More</a></div>
         </div>
         <div class="bg-circle-1 bg-circle"></div>
@@ -34,13 +34,18 @@
         <div class="container" id="main">
             <div class="row align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><img class="rounded-circle img-fluid" data-aos="fade-down" src="assets/img/gcr1.png"></div>
+                    <div class="p-5"><img class="rounded-circle img-fluid" data-aos="flip-down" src="assets/img/gcr1.png"></div>
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
-                        <h3 data-aos="fade-down" data-aos-once="true" class="display-4" style="font-size: 50px;font-family: Catamaran, sans-serif;filter: grayscale(0%);">What is Google Cloud Ready Program?</h3>
-                        <p data-aos="fade-down">Through the program, you will gain strong industry skills with hands-on labs that will help you launch a career in cloud. <br>Along the way you will earn <strong>Awesome</strong> rewards at different milestones: <br>A Thank You Post Card From Google
-                            <br>Awesome Google Branded Swags and who knows <strong>A JOB!!</strong> </p>
+                        <h3 data-aos="flip-down" data-aos-once="true" class="display-4" style="font-size: 50px;font-family: Catamaran, sans-serif;filter: grayscale(0%);">What is Google Cloud Ready Program?</h3>
+                        <p data-aos="flip-down">Google Cloud Ready Program will help you gain strong industry skills with hands-on labs that will help you launch a career in cloud. 
+                            <br>Along the way you will earn <strong>Awesome</strong> rewards at different milestones: <br>A Thank You Post Card From Google
+                            <br>Awesome Google Branded Swags 
+                            <br> who knows <strong>A JOB!!</strong> 
+                            <h4><strong>Fun is fundamental, there is no way around it.</strong></h4>
+                        </p>
+                            
                     </div>
                 </div>
             </div>
@@ -50,12 +55,12 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 order-lg-1">
-                    <div class="p-5"><img class="rounded-circle img-fluid" data-aos="slide-right" src="assets/img/badge.png"></div>
+                    <div class="p-5"><img class="rounded-circle img-fluid" data-aos="flip-down" src="assets/img/badge.png"></div>
                 </div>
                 <div class="col-lg-6 order-lg-2">
                     <div class="p-5">
-                        <h2 data-aos="slide-left" class="display-4">What Will You Do?</h2>
-                        <p data-aos="slide-left"><strong>Learn! Earn! Repeat!</strong>
+                        <h2 data-aos="flip-down" class="display-4">What Will You Do?</h2>
+                        <p data-aos="flip-down"><h3><strong>Learn! 👨‍💻&nbsp; &nbsp; Earn! 🎖&nbsp; &nbsp; Repeat!🔁</strong></h3>
                             <br>All you need to do is to complete various hands-on labs provided by <strong>QWIKLABS</strong> <br> After completing labs as per the prescribed syllabus (will be offered to to at a later stage) you will earn some
                             seriously <strong>cool!!</strong> Quest and Skill Badges from Qwiklabs that you can show-off to the World <sup>(Maybe Your Potential Employer)</sup>
                             <br>More the badges, Better the Reward <strong>*Dead Simple*</strong></p>
@@ -73,9 +78,9 @@
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
                         <h2 data-aos="flip-down" class="display-4">How Can You Get In?</h2>
-                        <p data-aos="flip-down"><strike><strong>You have to find the old man who lives on an island located at the dead end of The Pacific Ocean. (Just Kidding).</strong></strike> 
-                            <br>If you are a student of <strong>Delhi Institute of Tool Engineering</strong>, You can drop a WhatsApp Text Message to Siddhant. 
-                            <br> But If you are not a student of DITE, You can drop a mail to Siddhant by clicking <a href="mailto: siddhant1751@gmail.com"> <strong>Here</strong> </a></p>
+                        <p data-aos="flip-down"><strike><strong>Find the old wizard with pink beard and blue hairs, He holds the key that opens the door.</strong></strike> 
+                            <br>If you are a student of <strong>Delhi Institute of Tool Engineering</strong> Drop a text to developer of the page. 
+                            <br> But If you are not a student of DITE, Drop a mail <a href="mailto: siddhant1751@gmail.com"> <strong>Here</strong> </a></p>
                     </div>
                 </div>
             </div>
